# QwenVLM-Test

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
scenarios/: image_local.example.yaml  multimodal.example.yaml  text_only.json  text_only.yaml
scenarios/prompts/: sample_user.txt
vlm_bench/: __init__.py  __main__.py  cli.py  client.py  config.py  messages.py  routing.py  scenario.py  sse.py  types.py
vlm_bench/backends/: __init__.py  openai_compatible.py  protocol.py
